--- a/src/App.css
+++ b/src/App.css
@@ -524,17 +524,17 @@
 }
 .ReactRouterDom {
   position: absolute;
-  width: 100%;
+  width: 80%;
   top: auto;
-  left: 7%;
+  left: 20%;
   z-index: 20;
 }
 .dataUser {
-  width: 90%;
+  width: 80%;
   height: auto;
   background-color: #007bff;
   margin-top: 18%;
-  margin-left: 5%;
+  margin-left: 15%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -733,6 +733,14 @@
 }
 .publicarFotoBtn h5 {
   margin: 0;
+}
+.videosContenidoPublicado{
+  width: 100%;
+  background: #333;
+}
+.videosContenidoPublicado source{
+  width: 100%;
+  height: 100%;
 }
 .escribirUnComentarioAlPublicarFoto {
   width: 70%;
