--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,17 @@
 .mainContent {
   overflow-y: hidden;
 }
+.complementImageIcon{
+  width: 50vh;
+  position: absolute;
+  top: 30vh;
+  right: 8%;
+  opacity: 0.4;
+}
+.complementImageIcon img{
+  width: 100%;
+  border-radius: 100vh;
+}
 .resgistradoLogoFundaMostrar img {
   width: 5%;
   height: auto;
@@ -1886,6 +1897,12 @@
     width: 100%;
     height: auto;
   }
+  .complementImageIcon{
+    width: 35vh;
+    opacity: 0.4;
+    top: 30vh;
+    right: 5%;
+  }
   .forma1Texto1 {
     position: relative;
     width: 100%;
@@ -2538,7 +2555,12 @@
     margin-top: 3%;
   }
 }
-
+@media screen and (min-width: 900px) and (max-width: 1000px){
+  .complementImageIcon{
+    width: 25vh;
+    top: 19vh;
+  }
+}
 @media screen and (min-width: 300px) and (max-width: 350px) {
   .forma1 {
     margin-top: 15vh;
@@ -2564,6 +2586,9 @@
   .barraChat{
     width: 100%;
   }
+  .complementImageIcon{
+    top: 38vh;
+  }
 }
 @media screen and (min-width: 351px) and (max-width: 410px) {
   .navegacionUsuarioAdm {
@@ -2584,12 +2609,18 @@
   .barraChat{
     width: 100%;
   }
+  .complementImageIcon{
+    top: 33%;
+  }
 }
-@media screen and (min-width: 412px) and (max-width: 460px) {
+@media screen and (min-width: 410px) and (max-width: 460px) {
   .SubirPDFMOstrar button {
     top: 2vh;
   }
   .barraChat{
     width: 100%;
+  }
+  .complementImageIcon{
+    top: 27vh;
   }
 }
